<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KDiary</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title :</string>
    <string name="title_hint">제목을 입력해주세요</string>
    <string name="content">Content : </string>
    <string name="content_hint">내용을 입력해주세요</string>
    <string name="save">저장</string>
    <string name="del">삭제</string>
    <string name="question">질문</string>
    <string name="question_del">메모를 삭제하시겠습니까?</string>
    <string name="add">추가</string>
    

</resources>
